tests/ui/nll/user-annotations/issue-54124.rs
fn test<'a>() {
    let _:fn(&()) = |_:&'a ()| {}; //~ ERROR lifetime may not live long enough
    //~^ ERROR lifetime may not live long enough
}

fn main() {
    test();
}
